crates/devc-tui/tests/snapshots/snapshot_tests__logs_view.snap
---
source: crates/devc-tui/tests/snapshot_tests.rs
expression: output
---
┌ devc - Dev Container Manager ────────────────────────────────────────────────┐
│ 1:Containers  │  2:Providers  │  3:Settings                                  │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Logs: my-rust-project [1/3] 100% ────────────────────────────────────────────┐
│    1 2024-01-01 00:00:00 Container starting...                               │
│    2 2024-01-01 00:00:01 Loading configuration...                            │
│    3 2024-01-01 00:00:02 Server started on port 8080                         │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│j/k: Scroll  g/G: Top/Bottom  PgUp/PgDn: Page  r: Refresh  Esc/q: Back        │
└──────────────────────────────────────────────────────────────────────────────┘
