crates/devc-tui/tests/snapshots/snapshot_tests__ports_popup_empty.snap
---
source: crates/devc-tui/tests/snapshot_tests.rs
expression: output
---
┌ devc - Dev Container Manager ────────────────────────────────────────────────┐
│ 1:Containers  │  2:Providers  │  3:Settings                                  │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Contai┌ Port Forwarding: my-rust-project [auto-all] ─────────────────┐───────┐
│      N│No ports detected.                                            │       │
│       │                                                              │       │
│▶ ●   m│Waiting for port detection...                                 │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       └──────────────────────────────────────────────────────────────┘       │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│[f]orward  [a]ll  [A]uto-all:ON  j/k: Navigate  1-3: Switch tab  q/Esc: Back  │
└──────────────────────────────────────────────────────────────────────────────┘
