crates/devc-tui/tests/snapshots/snapshot_tests__ports_popup_with_ports.snap
---
source: crates/devc-tui/tests/snapshot_tests.rs
expression: output
---
┌ devc - Dev Container Manager ────────────────────────────────────────────────┐
│ 1:Containers  │  2:Providers  │  3:Settings                                  │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Contai┌ Port Forwarding: my-rust-project ────────────────────────────┐───────┐
│      N│  PORT             STATUS          LOCAL            PROCESS   │       │
│       │                                                              │       │
│▶ ●   m│▶ 3000             ● Forwarded     localhost:3000   node      │       │
│       │  8080             ○ Detected      -                java [NEW]│       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       └──────────────────────────────────────────────────────────────┘       │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│[s]top  [o]pen browser  [n]one  [A]uto-all  j/k: Navigate  1-3: Switch tab  q/│
└──────────────────────────────────────────────────────────────────────────────┘
