crates/devc-tui/tests/snapshots/snapshot_tests__provider_detail_popup.snap
---
source: crates/devc-tui/tests/snapshot_tests.rs
expression: output
---
┌ devc - D┌ Docker Configuration ────────────────────────────────────┐─────────┐
│ 1:Contai│                                                          │         │
└─────────│Provider: Docker (ACTIVE)                                 │─────────┘
┌ Provider│                                                          │─────────┐
│  Active │Socket Path:    /var/run/docker.sock  [e] to edit         │         │
│         │                                                          │         │
│▶ ●      │Connection:     ● Connected  [t] to test                  │         │
│  ○      │                                                          │         │
│         │─── Tips ────────────────────────────────────────         │         │
│         │                                                          │         │
│         │• Start Docker: sudo systemctl start docker               │         │
│         │• Default socket: /var/run/docker.sock                    │         │
│         │                                                          │         │
│         │                                                          │         │
│         │                                                          │         │
│         │                                                          │         │
│         │                                                          │         │
│         └──────────────────────────────────────────────────────────┘         │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│e: Edit Socket  t: Test  a/Space: Set Active  s: Save  1-3: Switch tab  Esc/q:│
└──────────────────────────────────────────────────────────────────────────────┘
