crates/devc-tui/tests/snapshots/snapshot_tests__simple_confirm_dialog.snap
---
source: crates/devc-tui/tests/snapshot_tests.rs
expression: output
---
┌ devc - Dev Container Manager ────────────────────────────────────────────────┐
│ 1:Containers  │  2:Providers  │  3:Settings                                  │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Containers ──────────────────────────────────────────────────────────────────┐
│      Name                   Status       Provider   Workspace                │
│                                                                              │
│▶ ●   test-container         running      docker     /tmp/test                │
│              ┌ Confirm ───────────────────────────────────────┐              │
│              │                                                │              │
│              │       Delete container 'test-container'?       │              │
│              │                                                │              │
│              │                                                │              │
│              │              Confirm        Cancel             │              │
│              │                                                │              │
│              │     Tab: Switch  Enter: Select  Esc: Cancel    │              │
│              └────────────────────────────────────────────────┘              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│y/Enter: Yes  n/Esc: No                                                       │
└──────────────────────────────────────────────────────────────────────────────┘
